--- a/app/views/images/_drawer_annotations.html.erb
+++ b/app/views/images/_drawer_annotations.html.erb
@@ -39,8 +39,9 @@
 
   <header>
     <span style="white-space:pre-wrap;" class="navbar-brand">Load Existing Annotations</span>
-    <span>Click to visualize a previously drawn annotation</span><br/>
     <%=link_to download_annotations_image_path(@image.id) do%><span>Download Annotations in JSON</span><% end %>
+    <%=link_to download_annotations_xml_image_path(@image.id) do%><span>Download Annotations in XML</span><% end %>
+    <span>Click to visualize a previously drawn annotation</span><br/>
   </header>
   <table class="annotations-table table table-hover">
     <thead>
