--- a/app/views/images/_drawer_home.html.erb
+++ b/app/views/images/_drawer_home.html.erb
@@ -15,6 +15,9 @@
   <a href="<%=show_3d_image_path(image) %>" class="list-group-item drawer-link">
     <i class="material-icons" role="presentation">visibility</i>View in 3D
   </a>
+  <a href="<%=show_landmark_points_3d_image_path(image) %>"  class="list-group-item drawer-link">
+    <i class="material-icons" role="presentation">room</i>Edit Landmark
+  </a>
   <% end %>
 
   <li class="bmd-layout-spacer"></li>
