--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -85,7 +85,7 @@
         timeout: 100000,
         imageLoaderLimit: 7
     });
-
+    console.log(viewer.viewport.getZoom());
     bindAnnotationRows();
 
     var mouse_tracker = new OpenSeadragon.MouseTracker({
@@ -388,7 +388,6 @@
     <% if @image.threed? %>
         var changeSlide = function() {
             var slice_num = slice_slider.bootstrapSlider('getValue');
-                console.log(slice_num);
             var current_bounds = viewer.viewport.getBounds();
             //var saved_annotations = viewer.annotations.get();
             var is_drawing_mode = $('.drawer-annotations').hasClass('active');
