--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -94,7 +94,9 @@
     });
 
     var image_width = <%=@image_shown.width %>;
+    console.log(image_width)
     var image_height = <%=@image_shown.height %>;
+    console.log(image_height)
 
     var annotation_type = "";
     var annotation_tool = "";
