--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,7 +5,7 @@
 <h1>Welcome to Digital Pathology!</h1>
 </div>
 <br/>
-<b><a href="https://slimwiki.com/imageviewer/">Resources: Wiki and Tutorials</a></b>
+<b><a href="https://jkonglab.github.io/DigitalPathology/">Resources: Wiki and Tutorials</a></b>
 <br/></br>
 <b>Digital Pathology is a web application that provides a accessible, user-friendly online workbench for working with, sharing and analyzing pathology imaging data and image analysis algorithms from any web browser. Digital Pathnology is a on-going project in Dr. Jun Kong's lab at Georgia State University.</b>
 <br/>
@@ -18,6 +18,6 @@ Digital Pathology Goals:
 	<li>Establish a growing library of public pathology images and algorithms for public use.</li>
 </ul>
 
-For more information on how to use this workbench, please visit our <a href="https://slimwiki.com/imageviewer/">wiki</a> for more information or if you would like to distribute your algorithms via our platform, please contact <a href="dbhuvanapalli1@student.gsu.edu">Divya Bhuvanapalli</a> of Dr. Kong's lab.
+For more information on how to use this workbench, please visit our <a href="https://jkonglab.github.io/DigitalPathology/">wiki</a> for more information or if you would like to distribute your algorithms via our platform, please contact <a href="mailto:spaul24@student.gsu.edu">Saptarshi Paul</a> of Dr. Kong's lab.
 
 </div>
