--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -1,6 +1,13 @@
 <div class="container">
 <br/><br/>
 <h1>Analyses List</h1>
+<script>
+	let counter = 1;
+	setInterval(() =>{
+		counter++;
+		if (counter > 5) location.reload()
+	}, 1000);
+</script>
 <h4>Review previous analyses on images</h4>
 <br/><br/>
 <div class="image-table">
