+ cleaned the repo

--- a/app/views/images/_search_form.html.erb
+++ b/app/views/images/_search_form.html.erb
@@ -58,5 +58,5 @@
     }).render();
 
     $('#searchFormCardContent').html(form.el);
-    $('#searchFormCardContent form').append('<button class="btn btn-raised btn-success" type="buttoon">Search</button>');
+    $('#searchFormCardContent form').append('<button class="btn btn-raised btn-success" type="button">Search</button>');
 </script>
