--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -1,7 +1,16 @@
-<% if @run.algorithm.output_type == Algorithm::OUTPUT_TYPE_LOOKUP["3d_volume"]%>
-    <%= render partial: 'show_3d' %>
-<% elsif @run.algorithm.output_type == Algorithm::OUTPUT_TYPE_LOOKUP["landmarks"]%>
-    <%= render partial: 'show_landmark_points_3d' %>
+<% if @algorithm.name == 'virtual_needle_config' %> 
+     <%= render partial: 'show_biopsy_sampling' %>   
 <% else %>
-    <%= render partial: 'show_2d' %>
+    <% if @run.algorithm.output_type == Algorithm::OUTPUT_TYPE_LOOKUP["3d_volume"]%>
+        <%= render partial: 'show_3d' %>
+    <% elsif @run.algorithm.output_type == Algorithm::OUTPUT_TYPE_LOOKUP["landmarks"]%>
+        <%= render partial: 'show_landmark_points_3d' %>
+    <% else %>
+        <%= render partial: 'show_2d' %>
+    <% end %>
 <% end %>
+
+<script>
+var test = '<%= @algorithm.name %>';
+console.log(test)
+</script>
