--- a/app/views/users/admin_panel.html.erb
+++ b/app/views/users/admin_panel.html.erb
@@ -4,6 +4,7 @@
     <li class="active nav-item"><a class="active nav-link" data-toggle="tab" href="#users">Users</a></li>
     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#images">Projects</a></li>
     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#algorithms">Algorithms</a></li>
+    <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#logs">Logs</a></li>
   </ul>
 
   <div class="main-content tab-content" style="padding:20px;">
@@ -15,6 +16,9 @@
     </div>
     <div id="algorithms" class="tab-pane fade">
       <%= render 'algorithms_panel' %>
+    </div>
+    <div id="logs" class="tab-pane fade">
+      <%= render 'logs_panel' %>
     </div>
   </div>
 </div>
